--- a/portfolio.html
+++ b/portfolio.html
@@ -1,87 +1,80 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Portfolio - João da Silva</title>
-		<meta charset="utf-8">
-		<link rel="icon" href="imagens/favicon.png">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/site.css">
-
-		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
-
-		<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
-		<!-- que é a única necessária para os cabeçalhos            -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
-	</head>
-	<body>
-		<main>
-			<h1 class="titulo">Portfolio</h1>
-			<div class="container">
-				<p>Veja abaixo a lista do meus projetos mais relevantes</p>
-				<ul class="box">
-
-					<li>
-						<a href="http://bmw.com">
-							<figure>
-								<img src="imagens/bmw.png">
-								<figcaption>BMW.com: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
-							</figure>
-						</a>
-					</li>
-
-					<li>
-						<a href="http://ibm.com">
-							<figure>
-								<img src="imagens/ibm.png">
-								<figcaption>ibm.com: aplicação de progressive enhacement wm conjunto com aplicação back-end</figcaption>
-							</figure>
-						</a>
-					</li>
-
-					<li>
-						<a href="http://oul.com.br">
-							<figure>
-								<img src="imagens/uol.png">
-								<figcaption>OUL.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
-							</figure>
-						</a>
-					</li>
-
-					<li>
-						<a href="http://g1.com.br">
-							<figure>
-								<img src="imagens/g1.png">
-								<figcaption>G1.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
-							</figure>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</main>
-
-		<img class="minha-foto" src="imagens/eu.jpg" alt="Foto João da Silva"> 
-		<aside class="navegacao-site">
-			<div>
-				<h1>João da Silva</h1>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="bio.html">Sobre mim</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="contato.html">Contato</a></li>
-					</ul>
-				</nav>
-				<ul class="icones-sociais">
-					<li class="github"><a href="https://github.com/lemoosth"><!--<img src="imagens/github.png" alt="Github"> -->GitHub</a></li>
-					<li class="twitter"><a href="https://twitter.com/Lemoos_th"><!--<img src="imagens/twitter.png" alt="Twitter">-->Twitter</a></li>
-					<li class="linkedin"><a href="https://www.linkedin.com/in/thiago-lemos-0a4040100/"><!--<img src="imagens/linkedin.png" alt="Linkedin">-->LinkdIn</a></li>
-				</ul>
-			</div>
-		</aside>
-		<footer id="rodape-pagina">
-			&copy; Thiago Lemos 2014
-		</footer>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <title>Portfolio - João da Silva</title>
+    <link rel="icon" href="imagens/favicon.png">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
+</head>
+<body>
+    <main>
+        <h1 class="titulo-principal">Portfolio</h1>
+        <div class="container">
+            <p>Veja abaixo a lista dos meus projetos mais relevantes</p>
+            <ol class="portfolio">
+                <li><a href="http://bmw.com">
+                        <figure>
+                            <img src="imagens/bmw.png" alt="Site da BMW">
+                            <figcaption>BMW.com: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
+                        </figure>
+                </a></li>
+                <li><a href="http://uol.com.br">
+                        <figure>
+                            <img src="imagens/uol.png" alt="Front-page da UOL">
+                            <figcaption>UOL.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
+                        </figure>
+                </a></li>
+                <li><a href="http://www.ibm.com.br">
+                        <figure>
+                            <img src="imagens/ibm.png" alt="Site da IBM">
+                            <figcaption>IBM.com: aplicação de progressive enhancement em conjunto com aplicação back-end</figcaption>
+                        </figure>
+                </a></li>
+                <li><a href="http://g1.com.br">
+                        <figure>
+                            <img src="imagens/g1.png" alt="Front-page do portal G1">
+                            <figcaption>G1.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
+                        </figure>
+                </a></li>
+            </ol>
+        </div>
+    </main>
+    <img src="imagens/eu.jpg" alt="Minha foto" class="minha-foto">
+    <aside class="navegacao-site">
+        <h1>João da Silva</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="bio.html">Sobre mim</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+        <ul class="icones-redes-sociais">
+            <li>
+                <a href="https://github.com/joaodasilva" class="github">
+                    Github
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/joaodasilva" class="twitter">
+                    Twitter
+                </a>
+            </li>
+            <li>
+                <a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin">
+                    LinkedIn
+                </a>
+            </li>
+        </ul>
+    </aside>
+    <footer class="rodape-pagina">
+        &copy; João da Silva 2014
+    </footer>
+</body>
 </html>
