--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <header class="titulo-principal">
         <img class="foto-home" src="imagens/eu.jpg" alt="Foto de João da Silva">
         <h1>João da Silva</h1>
-        <p class="subtitulo-pricipal">Desenvolvedor web</p>
-
+        <p class="subtitulo-principal">Desenvolvedor web</p>
         <ul class="palavras-home">
             <li class="palavra-home eficiencia">Eficiência</li>
             <li class="palavra-home boas-praticas">Boas práticas</li>
@@ -30,7 +29,6 @@
             <li class="palavra-home agilidade">Agilidade</li>
             <li class="palavra-home design">Design</li>
         </ul>
-
         <a class="banner-twitter" href="http://twitter.com/joaodasilva">Siga-me no Twitter</a>
     </header>
     <main>
@@ -51,7 +49,7 @@
             <h2>Blog</h2>
             <small>Últimos posts</small>
             <ol>
-                <li>
+                <li class="mais-recente">
                     <a href="blog.html">O essencial de design responsivo</a>
                     <p class="inicio-post">
                         Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?
